index.html bug fixed

--- a/node/views/index.html
+++ b/node/views/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<a href="editor.html">Editor</a>
-<a href="admin.html">Admin</a>
+<a href="/editor">Editor</a>
+<a href="/admin">Admin</a>
 </body>
 </html>
