--- a/node/views/editor.html
+++ b/node/views/editor.html
@@ -8,6 +8,9 @@
     <script type="application/javascript" src="/javascripts/editor.js"></script>
 </head>
 <body>
+<select id="ledger" onchange='setLedger(event)'>
+    <option value="Main">Main</option>
+</select>
 <table id='table' width="100%" border="1px">
     <thead>
     <tr>
@@ -19,7 +22,9 @@
         <td>Összeg</td>
         <td>Fkvnev</td>
         <td>Ktghely</td>
-        <td class="editor"><input type='file' accept='text/json' onchange='openFile(event)'><br></td>
+        <td class="editor">
+
+        </td>
     </tr>
     <tr class="editor">
         <td>
@@ -35,7 +40,7 @@
                 <option value="HUF">HUF</option>
             </select>
         </td>
-        <td><input id="in_osszeg" type='value'></td>
+        <td><input id="in_osszeg" type='number'></td>
         <td>
             <select id="in_fkvnev">
                 <option value="Adott előlegek">Adott előlegek</option>
@@ -58,7 +63,7 @@
 <div id="d_editor">
     <button id='btn_save' onclick='save()'>Mentés</button>
     <button id='btn_preview' onclick='preview()'>Előnézet</button>
-    <br>
+    <input type='file' accept='text/json' onchange='openFile(event)'>
 </div>
 <div id="d_signer">
     <button id='btn_back' onclick='editorMode()'>Vissza</button>
