--- a/node/views/editor.html
+++ b/node/views/editor.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/node-forge@0.7.0/dist/forge.min.js"></script>
+    <script type="application/javascript" src="/javascripts/ext/jquery.min.js"></script>
+    <script type="application/javascript" src="/javascripts/ext/forge.min.js"></script>
+    <script type="application/javascript" src="/javascripts/keyData.js"></script>
     <script type="application/javascript" src="/javascripts/ledgerData.js"></script>
     <script type="application/javascript" src="/javascripts/editor.js"></script>
 </head>
@@ -19,7 +20,7 @@
         <td>Jogcím</td>
         <td>Deviza</td>
         <td>Összeg</td>
-        <td>Fkvnev</td>
+        <td>Főkönyvi név</td>
         <td>Ktghely</td>
         <td class="editor">
 
